re PR c++/20679 (Parse error when accessing attributes of an inner class. Enclosing class is template and have methods with the same name.)

PR c++/20679
	* parser.c (cp_parser_template_name): Fix thinko.

	PR c++/20679
	* g++.dg/template/overload4.C: New test.

From-SVN: r97568